# python-sdk

./: .gitignore  AWESOME_LISTS_SUBMISSIONS.md  BACKLINK_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CREATE_GITHUB_ISSUES.sh  CREATE_QA_GITHUB_ISSUES.sh  DEPLOY_CHECKLIST.md  Dockerfile.monitor  ERROR_ANALYSIS_TABLE.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  FIXES_APPLIED.md  GAP_ANALYSIS_SR_QA_ENGINEER.md  GITHUB_ISSUES.md  GITHUB_ISSUES_SDK.md  GITHUB_TOPICS_SETUP.md  IDAN_ISSUE_GITHUB_ISSUES_CREATED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASES.md  MARKETING_ACTION_PLAN.md  PERFORMANCE_BASELINE.md  PHASE_1_COMPLETE.md  POST_ON_SATURDAY.md  PUBLISH_GUIDE.md  PUBLISH_TO_PYPI.sh  PYTHON_SDK_PRD.md  Q1_ISSUES_COMPLETE_SUMMARY.md  Q2_ISSUES_COMPLETE_SUMMARY.md  QA_ASSESSMENT_HISTORICAL_TIMEOUT_ISSUE.md  QA_TRANSFORMATION_COMPLETE.md  README.md  READY_FOR_REVIEW.md  READY_TO_SUBMIT.md  REDDIT_POST_COPY_PASTE.md  REDDIT_POST_FINAL.md  REDDIT_POST_HONEST.md  REDDIT_POST_STATUS.md  REDDIT_POST_TEMPLATE.md  SDK_ANALYSIS_AND_RECOMMENDATIONS.md  (+23 more)
.github/: MONITORING_GUIDE.md  PRE_RELEASE_CHECKLIST.md  dependabot.yml
.github/workflows/: github-pages.yml  live-tests.yml  publish.yml  test.yml  weekly-health.yml
build-env/: pyvenv.cfg
docs/: CANARY_RELEASES.md  PERFORMANCE_GUIDE.md  TELEMETRY.md  index.html  index.md
docs/reference/: async_client.md  client.md  exceptions.md  models.md  resources.md
examples/: local_test.py  quickstart.py  visualization_demo.py  visualization_test.py
examples/snippets/: _shared.py  authentication_error.py  entitlement_error.py  history.py  latest_price.py  manifest-source.json  rate_limit_error.py  timeout_error.py
monitoring/: README.md
oilpriceapi/: __init__.py  _subscriptions_common.py  async_client.py  async_resources.py  cli.py  client.py  exceptions.py  models.py  resource_validators.py  retry.py  telemetry.py  version.py  visualization.py
oilpriceapi/resources/: __init__.py  _futures_slug.py  alerts.py  analysis.py  analytics.py  bunker_fuels.py  commodities.py  data_quality.py  data_sources.py  demo.py  diesel.py  drilling.py  forecasts.py  futures.py  historical.py  prices.py  rig_counts.py  storage.py  subscriptions.py  webhooks.py  well_production.py
oilpriceapi/resources/ei/: __init__.py  drilling_productivity.py  forecasts.py  frac_focus.py  oil_inventories.py  opec_production.py  rig_counts.py  well_permits.py
oilpriceapi/streaming/: __init__.py  client.py  models.py
schemas/: snippet-manifest.schema.json
scripts/: generate_snippet_manifest.py  pre-release-validation.sh  synthetic_monitor.py  validate_storefront_claims.py
tests/: __init__.py  conftest.py  sdk_audit_test.py  test_client.py  test_no_hardcoded_api_keys.py  test_snippet_manifest.py  test_storefront_claims.py  test_telemetry_headers.py
tests/contract/: README.md  __init__.py  conftest.py  test_api_contract.py
tests/integration/: README.md  conftest.py  test_demo_contract.py  test_historical_endpoints.py  test_live_api.py  test_live_futures.py  test_live_subscriptions.py  test_live_well_production.py
tests/unit/: test_alerts_resource.py  test_analysis_resource.py  test_analytics_resource.py  test_async_client.py  test_async_subscriptions_resource.py  test_async_well_production_resource.py  test_bunker_fuels_resource.py  test_commodities_resource.py  test_data_quality_resource.py  test_data_sources_resource.py  test_demo_resource.py  test_diesel_resource.py  test_drilling_resource.py  test_exceptions.py  test_forecasts_resource.py  test_futures_resource.py  test_futures_slug.py  test_historical_resource.py  test_models.py  test_performance_docs.py  test_prices_resource.py  test_retry.py  test_rig_counts_resource.py  test_storage_resource.py  test_streaming.py  test_subscriptions_resource.py  test_webhooks_resource.py  test_well_production_resource.py
